[gd_scene load_steps=10 format=3 uid="uid://23icyprm7xtk"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_46110"]
[ext_resource type="PackedScene" uid="uid://djql07clsuycf" path="res://scenes/area_barrier.tscn" id="1_qfxj0"]
[ext_resource type="PackedScene" uid="uid://wyehcnibcwfo" path="res://scenes/character_enemy_bat.tscn" id="2_0b7nw"]
[ext_resource type="PackedScene" uid="uid://cwrcoho08s1sq" path="res://scenes/character_enemy_zombie.tscn" id="3_sv4su"]
[ext_resource type="PackedScene" uid="uid://cxqyxieu1ybkl" path="res://scenes/characters_scene.tscn" id="6_ekbvq"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hpcmk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ytx0"]
size = Vector2(58, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uief"]
size = Vector2(58, 58)

[sub_resource type="Curve2D" id="Curve2D_mcyjd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -53, 234, 0, 0, 0, 0, -26, -21, 0, 0, 0, 0, 111, -44, 0, 0, 0, 0, 403, -49, 0, 0, 0, 0, 725, -51, 0, 0, 0, 0, 1038, -39, 0, 0, 0, 0, 1209, -39, 0, 0, 0, 0, 1287, -34, 0, 0, 0, 0, 1348, 55, 0, 0, 0, 0, 1391, 206)
}
point_count = 10

[node name="MainScene" type="CanvasLayer"]
script = ExtResource("1_46110")
CharacterEnemyBat = ExtResource("2_0b7nw")
CharacterEnemyZombie = ExtResource("3_sv4su")

[node name="StaticBodyWorld" type="StaticBody2D" parent="."]
position = Vector2(640, 689)
collision_layer = 16
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodyWorld"]
position = Vector2(640, 720)
shape = SubResource("WorldBoundaryShape2D_hpcmk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113033, 2.83971e-06, 0.541984, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_right = 145.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 57
text = "Barrier:  %"

[node name="AreaBarrier" parent="." instance=ExtResource("1_qfxj0")]
unique_name_in_owner = true
position = Vector2(640, 527)
scale = Vector2(0.6, 0.6)

[node name="CharactersController" parent="." instance=ExtResource("6_ekbvq")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="TimerEnemySpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="StaticBodySpawnRight" type="StaticBody2D" parent="."]
position = Vector2(1309, 649)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodySpawnRight"]
shape = SubResource("RectangleShape2D_2ytx0")

[node name="StaticBodySpawnLeft" type="StaticBody2D" parent="."]
position = Vector2(-29, 649)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodySpawnLeft"]
rotation = -1.57079
shape = SubResource("RectangleShape2D_1uief")

[node name="PathSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_mcyjd")

[node name="PathFollow2D" type="PathFollow2D" parent="PathSpawn"]
position = Vector2(1391, 205.998)
rotation = 1.29337
progress = 1836.68

[connection signal="timeout" from="TimerEnemySpawn" to="." method="_on_timer_enemy_spawn_timeout"]
